// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInfosGenerales /> should render 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

<div>
  <form>
    <p
      class="c0"
    >
      Quel est votre type de contrat ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="contractType"
          type="radio"
          value="CDD"
        />
        <span>
          Contrat à durée déterminée (CDD)
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="contractType"
          type="radio"
          value="CTT"
        />
        <span>
          Contrat de travail temporaire (Contrat d’intérim)
        </span>
      </label>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CDD 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c5 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c6 {
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
  margin-top: 0.625rem;
  margin-right: 1.25rem;
}

.c4 {
  margin: 1.25rem 0;
}

<div>
  <form>
    <p
      class="c0"
    >
      Quel est votre type de contrat ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          checked=""
          name="contractType"
          type="radio"
          value="CDD"
        />
        <span>
          Contrat à durée déterminée (CDD)
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="contractType"
          type="radio"
          value="CTT"
        />
        <span>
          Contrat de travail temporaire (Contrat d’intérim)
        </span>
      </label>
    </div>
    <div
      class="c4"
    >
      <label
        class="c5"
        for="input-criteria.cddType"
      >
        Quelle est le type de votre cdd ?
      </label>
      <select
        class="c6"
        id="input-criteria.cddType"
        name="criteria.cddType"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="CDD saisonnier"
        >
          CDD saisonnier
        </option>
        <option
          value="CDD d'usage"
        >
          CDD d'usage
        </option>
        <option
          value="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
        >
          CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires
        </option>
        <option
          value="CCD dans le cadre d’un congé de mobilité"
        >
          CCD dans le cadre d’un congé de mobilité
        </option>
        <option
          value="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
        >
          Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)
        </option>
        <option
          value="Contrat de professionnalisation ou Contrat d’apprentissage"
        >
          Contrat de professionnalisation ou Contrat d’apprentissage
        </option>
        <option
          value="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
        >
          Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié
        </option>
        <option
          value="Autres"
        >
          Autres
        </option>
      </select>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CDD and not handled ccn 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c5 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c6 {
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
  margin-top: 0.625rem;
  margin-right: 1.25rem;
}

.c4 {
  margin: 1.25rem 0;
}

<div>
  <form>
    <p
      class="c0"
    >
      Quel est votre type de contrat ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          checked=""
          name="contractType"
          type="radio"
          value="CDD"
        />
        <span>
          Contrat à durée déterminée (CDD)
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="contractType"
          type="radio"
          value="CTT"
        />
        <span>
          Contrat de travail temporaire (Contrat d’intérim)
        </span>
      </label>
    </div>
    <div
      class="c4"
    >
      <label
        class="c5"
        for="input-criteria.cddType"
      >
        Quelle est le type de votre cdd ?
      </label>
      <select
        class="c6"
        id="input-criteria.cddType"
        name="criteria.cddType"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="CDD saisonnier"
        >
          CDD saisonnier
        </option>
        <option
          value="CDD d'usage"
        >
          CDD d'usage
        </option>
        <option
          value="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
        >
          CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires
        </option>
        <option
          value="CCD dans le cadre d’un congé de mobilité"
        >
          CCD dans le cadre d’un congé de mobilité
        </option>
        <option
          value="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
        >
          Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)
        </option>
        <option
          value="Contrat de professionnalisation ou Contrat d’apprentissage"
        >
          Contrat de professionnalisation ou Contrat d’apprentissage
        </option>
        <option
          value="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
        >
          Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié
        </option>
        <option
          value="Autres"
        >
          Autres
        </option>
      </select>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CTT 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.125rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

<div>
  <form>
    <p
      class="c0"
    >
      Quel est votre type de contrat ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        <input
          name="contractType"
          type="radio"
          value="CDD"
        />
        <span>
          Contrat à durée déterminée (CDD)
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          checked=""
          name="contractType"
          type="radio"
          value="CTT"
        />
        <span>
          Contrat de travail temporaire (Contrat d’intérim)
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      Avez vous un contrat de mission-formation ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
      data-testid="cttFormation"
    >
      <label
        class="c3"
      >
        <input
          name="cttFormation"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="cttFormation"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      Votre contrat d'intérim a-t-il été rompu avant la fin prévue pour une des raisons suivantes : votre propre initiative, votre faute grave ou en cas de force majeure ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
      data-testid="ruptureContratFauteGrave"
    >
      <label
        class="c3"
      >
        <input
          name="ruptureContratFauteGrave"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="ruptureContratFauteGrave"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      À la fin de votre contrat d'intérim, avez-vous été immédiatement embauché en CDI au sein de l'entreprise dans laquelle vous effectuiez votre mission ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
      data-testid="propositionCDIFinContrat"
    >
      <label
        class="c3"
      >
        <input
          name="propositionCDIFinContrat"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="propositionCDIFinContrat"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <p
      class="c0"
    >
      Avez-vous refusé la mise en œuvre de la souplesse prévue dans votre contrat d’intérim ?
      <span
        aria-label="champs obligatoire"
        class="c1"
      >
        *
      </span>
    </p>
    <div
      class="c2"
      data-testid="refusSouplesse"
    >
      <label
        class="c3"
      >
        <input
          name="refusSouplesse"
          type="radio"
          value="true"
        />
        <span>
          Oui
        </span>
      </label>
      <label
        class="c3"
      >
        <input
          name="refusSouplesse"
          type="radio"
          value="false"
        />
        <span>
          Non
        </span>
      </label>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;
